<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.javiervargas.tareacontactos.ConfirmacionContacto">

    <TextView
        android:id="@+id/txtConfirmaciónDatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/texto_confirmación_datos"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/título_layout_2" />

    <TextView
        android:id="@+id/txtvNombreConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/texto_nombre_confirm"
        android:textSize="@dimen/datos_confirmación"
        android:layout_below="@+id/txtConfirmaciónDatos"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp" />

    <TextView
        android:id="@+id/txtvNacimientoConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/texto_nacimiento_confirm"
        android:textSize="@dimen/datos_confirmación"
        android:layout_below="@+id/txtvNombreConfirm"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/txtvTeléfonoConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/texto_teléfono_confirm"
        android:textSize="@dimen/datos_confirmación"
        android:layout_below="@+id/txtvNacimientoConfirm"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/txtvEmailConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/texto_email_confirm"
        android:textSize="@dimen/datos_confirmación"
        android:layout_below="@+id/txtvTeléfonoConfirm"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/txtvDescripConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/texto_descripción_confirm"
        android:textSize="@dimen/datos_confirmación"
        android:layout_below="@+id/txtvEmailConfirm"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/btnEditarDatos"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:text="@string/botón_editar_datos"
        android:layout_marginBottom="81dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/txtvNombreConfirm2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:textSize="@dimen/datos_confirmación"
        android:layout_alignBottom="@+id/txtvNombreConfirm"
        android:layout_toRightOf="@+id/txtvDescripConfirm"
        android:layout_toEndOf="@+id/txtvDescripConfirm"
        android:layout_marginTop="60dp"/>

    <TextView
        android:id="@+id/txtvNacimientoConfirm2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:textSize="@dimen/datos_confirmación"
        android:layout_alignTop="@+id/txtvNacimientoConfirm"
        android:layout_alignRight="@+id/txtConfirmaciónDatos"
        android:layout_alignEnd="@+id/txtConfirmaciónDatos" />

    <TextView
        android:id="@+id/txtvTeléfonoConfirm2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:textSize="@dimen/datos_confirmación"
        android:layout_below="@+id/txtvNacimientoConfirm"
        android:layout_alignLeft="@+id/btnEditarDatos"
        android:layout_alignStart="@+id/btnEditarDatos"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/txtvEmailConfirm2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:textSize="@dimen/datos_confirmación"
        android:layout_above="@+id/txtvDescripConfirm"
        android:layout_alignLeft="@+id/txtConfirmaciónDatos"
        android:layout_alignStart="@+id/txtConfirmaciónDatos" />

    <TextView
        android:id="@+id/txtvDescripConfirm2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:textSize="18dp"
        android:layout_below="@id/txtvEmailConfirm2"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="10dp"

        />


</RelativeLayout>
